vitex-stats-server/vss-chain-sync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vss-chain-sync
  namespace: vitex-k8s
  labels:
    app.kubernetes.io/name: vitex-stats-server
    app.kubernetes.io/part-of: vitex-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vss-chain-sync
      app.kubernetes.io/part-of: vitex-k8s
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vss-chain-sync
        app.kubernetes.io/part-of: vitex-k8s
    spec:
      containers:
        - name: chain-sync
          image: yourdockerrepo/vitex-stats-server:1.12
          imagePullPolicy: "IfNotPresent"
          args: ["flask", "manage", "launch-sync"]
          volumeMounts:
            - mountPath: /etc/vitex-stats-server
              name: flask-config
              readOnly: true
      volumes:
        - name: flask-config
          configMap:
            name: vitex-stats-server
