vitex-stats-server/vss-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitex-stats-server
  namespace: vitex-k8s
  labels:
    app.kubernetes.io/name: vitex-stats-server
    app.kubernetes.io/part-of: vitex-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vitex-stats-server
      app.kubernetes.io/part-of: vitex-k8s
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vitex-stats-server
        app.kubernetes.io/part-of: vitex-k8s
    spec:
      containers:
        - name: website-backend
          image: yourdockerrepo/vitex-stats-server:1.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
              name: website-backend
          volumeMounts:
            - mountPath: /etc/vitex-stats-server
              name: flask-config
              readOnly: true
      volumes:
        - name: flask-config
          configMap:
            name: vitex-stats-server
