vitex-stats-server/vss-static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitex-stats-server-static
  namespace: vitex-k8s
  labels:
    app.kubernetes.io/name: vitex-stats-server-static
    app.kubernetes.io/part-of: vitex-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vitex-stats-server-static
      app.kubernetes.io/part-of: vitex-k8s
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vitex-stats-server-static
        app.kubernetes.io/part-of: vitex-k8s
    spec:
      containers:
        - name: website-frontend
          image: yourdockerrepo/vitex-stats-server-static:1.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
              name: frontend
