vitex-stats-server/vss-web-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitex-stats-server
  namespace: vitex-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - your.host.name
      secretName: vitex-stats-server-tls
  rules:
    - host: your.host.name
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: vitex-stats-server
                port:
                  name: website-backend
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: vitex-stats-server-static
                port:
                  name: frontend
